--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,90 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;1,300&display=swap');
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: #072e36;
+  color: #c6cabe;
+  font-family: "Roboto Mono", monospace;
+  font-weight: 300;
+}
+
+.wrapper {
+  width: 1280px;
+  margin: 50px auto;
+}
+
+header .logo {
+  font-weight: 600;
+  font-size: 20px;
+}
+
+header ul.nav {
+  float: right;
+  list-style: none;
+}
+
+header ul.nav li {
+  display: inline;
+  margin-left: 25px;
+  cursor: pointer;
+  transition: opacity .2s ease;
+}
+header ul.nav button {
+  color: #c6cabe;
+  display: inline;
+  margin-left: 25px;
+  cursor: pointer;
+  transition: opacity .2s ease;
+  text-decoration: none;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  font-size: 20px;
+}
+
+header ul.nav li:hover {
+  opacity: 0.5;
+}
+
+header .presentation {
+  margin: 50px 0;
+  background: url("./img/bg.png") no-repeat;
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  background-position: center 30%;
+  background-blend-mode: multiply;
+  background-color: #bcbcbc;
+  position: relative;
+}
+
+header .presentation::after {
+  content: 'Лучшие игры для Вас';
+  position: absolute;
+  bottom: 45px;
+  left: 50px;
+  width: 300px;
+  color: #fff;
+  font-size: 40px;
+  font-weight: 900;
+  line-height: 39px;
+}
+
+header .presentation::before {
+  content: 'по самым низким ценам';
+  position: absolute;
+  bottom: 15px;
+  left: 50px;
+  width: 300px;
+  color: #fff;
+  font-weight: 300;
+}
+
+footer {
+  text-align: center;
+  margin-top: 100px;
 }
