--- a/src/components/products/ProductCard.css
+++ b/src/components/products/ProductCard.css
@@ -19,11 +19,13 @@
 .card-img {
     align-items: center;
     align-self: center;
-    width: 80%;
+    width: 100%;
     height: 250px;
 }
 .card-price {
-    margin-left: 10px;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-right: 15px;
 }
 
 .card-footer {
@@ -35,16 +37,13 @@
 }
 
 .card-text {
-    display: flex;
-    align-items: flex-start;
-    margin-left: 10px;
-    font-size: 10px;
+    margin-left: 16px;
+    font-size: 17px;
+    margin-bottom: 5px;
 }
 
 .button-basket {
-    width: 100px;
-    height: 25px;
-    margin-right: 10px;
+    padding: 7px;
     font-size: 12px;
     background-color: black;
     color: white;
@@ -53,6 +52,8 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-family: inherit;
+    text-transform: uppercase;
 }
 
 .button-basket:hover {
@@ -61,4 +62,12 @@
 
 .button-basket:active {
     background-color: red;
+}
+
+.card-info-top {
+    display: flex;
+    align-items: center;
+    margin: 5px;
+    width: 100%;
+    justify-content: space-around;
 }
