--- a/src/index.css
+++ b/src/index.css
@@ -127,7 +127,12 @@ footer {
 header .logo_img {
   width: 75px;
   max-width: 100%;
+  transition: all 0.1s ease;
   cursor: pointer;
+}
+
+header .logo_img:hover{
+  opacity: 0.5;
 }
 
 footer .logo_img {
@@ -186,6 +191,32 @@ footer {
 }
 
 .footer-logo {
+  display: flex;
+  flex-direction: column;
+}
+
+.faq-block {
+  width: 70%;
+  text-align: left;
+}
+
+.question-block {
+  margin: 20px;
+}
+
+.faq {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.question {
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.question-block {
   display: flex;
   flex-direction: column;
 }
