--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,10 @@ body{
 
 .wrapper {
   width: 1280px;
-  margin: 50px auto;
+  margin-top: 50px;
+  margin-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 header .logo {
@@ -120,7 +123,6 @@ footer {
   width: 100%;
   height: 150px;
   display: flex;
-  border-radius: 0 0 10px 10px;
 }
 
 
@@ -219,4 +221,65 @@ footer {
 .question-block {
   display: flex;
   flex-direction: column;
+}
+
+.slide-container {
+  position: relative;
+  width: 100%;
+  height: 500px;
+}
+
+.slide-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: blur(1px);
+}
+
+.turn-slider {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 2rem;
+  background-color: rgba(255, 255, 255, 0.9);
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  padding: 10px;
+  transition: opacity 0.4s ease;
+
+}
+
+.turn-slider:hover {
+  opacity: 0.7;
+}
+
+.turn-slider-left {
+  left: 10px;
+}
+
+.turn-slider-right {
+  right: 10px;
+}
+
+.slide-text {
+  position: absolute;
+  bottom: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+  text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.9);
+  font-family: inherit;
+  font-size: 40px;
+  font-weight: 600;
+}
+
+.slide-text h2 {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.slide-text p {
+  font-size: 1.2rem;
 }
