--- a/src/index.css
+++ b/src/index.css
@@ -82,40 +82,6 @@ footer ul  li:hover {
   opacity: 0.5;
 }
 
-/* header .presentation {
-  margin: 50px 0;
-  background: url("./img/bg.png") no-repeat;
-  width: 100%;
-  height: 500px;
-  background-size: cover;
-  background-position: center 30%;
-  background-blend-mode: multiply;
-  background-color: #bcbcbc;
-  position: relative;
-}
-
-header .presentation::after {
-  content: 'Лучшие игры для Вас';
-  position: absolute;
-  bottom: 45px;
-  left: 50px;
-  width: 300px;
-  color: #fff;
-  font-size: 40px;
-  font-weight: 900;
-  line-height: 39px;
-}
-
-header .presentation::before {
-  content: 'по самым низким ценам';
-  position: absolute;
-  bottom: 15px;
-  left: 50px;
-  width: 300px;
-  color: #fff;
-  font-weight: 300;
-} */
-
 footer {
   text-align: center;
   margin-top: 60px;
@@ -225,7 +191,7 @@ footer {
 
 .slide-container {
   position: relative;
-  width: 100%;
+  width: 1280px;
   height: 500px;
 }
 
@@ -282,4 +248,10 @@ footer {
 
 .slide-text p {
   font-size: 1.2rem;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
